[package]
name = "radius-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
webpki-roots = "0.26"

[dev-dependencies]
tokio-test = "0.4"
